--- a/CPAngular2.Portal/Application/Shared/address.component.html
+++ b/CPAngular2.Portal/Application/Shared/address.component.html
@@ -1,36 +1,34 @@
-﻿
-
-<div class="form-group">
+﻿<div class="form-group">
     <label class="col-sm-2 control-label required">Strasse*</label>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    <div class="col-sm-8">
         <input type="text" class="form-control" [(ngModel)]="address.addressLine1">
     </div>
 </div>
 
 <div class="form-group">
     <label class="col-sm-2 control-label required">PLZ*</label>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    <div class="col-sm-8">
         <input type="text" class="form-control" [(ngModel)]="address.zipCode">
     </div>
 </div>
 
 <!--<div class="form-group">
     <label class="col-sm-2 control-label">Address Line 2</label>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    <div class="col-sm-8">
         <input type="text" class="form-control" [(ngModel)]="address.addressLine2">
     </div>
 </div>-->
 
 <div class="form-group">
     <label class="col-sm-2 control-label required">Ort*</label>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    <div class="col-sm-8">
         <input type="text" class="form-control" [(ngModel)]="address.city">
     </div>
 </div>
 
 <div class="form-group">
     <label class="col-sm-2 control-label required">Land*</label>
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    <div class="col-sm-8">
         <input type="text" class="form-control" [(ngModel)]="address.state">
     </div>
 </div>
