--- a/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
+++ b/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
@@ -133,7 +133,9 @@
                         <div class="tab-pane fade" id="tab3default">
                             <div class="panel panel-default col-lg-12" style="display:inline-block; vertical-align: top;">
                                 <div class="panel-heading">Languages</div>
-                                <div class="panel-body"></div>
+                                <div class="panel-body">
+                                    <languages></languages>
+                                </div>
                             </div>
                             <div class="panel panel-default col-lg-12" style="display:inline-block; vertical-align: top;">
                                 <div class="panel-heading">Skills</div>
