--- a/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
+++ b/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
@@ -20,7 +20,7 @@
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="tab1default">
                             <div class="container" >
-                                <div class="col-lg-6 " >
+                                <div class="col-sm-6 " >
                                     <div class="row">
                                         <div class="form-group">
                                             <label class="col-sm-2 control-label required">Anrede</label>
@@ -95,7 +95,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-lg-6" >
+                                <div class="col-sm-6" >
 
                                     <div class="row">
                                         <div class="form-group">
