removed hardcoded URL in web.config

--- a/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
+++ b/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
@@ -50,7 +50,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group">
-                                            <label class="col-sm-2 control-label">Photo</label>
+                                            <label class="col-sm-2 control-label required">Photo</label>
                                             <div class="col-sm-8">
 
                                                 <input type="file" name="photo" required (change)="fileChange(input)" #input />
