photo preview is working

--- a/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
+++ b/CPAngular2.Portal/Application/Customer/customer-maintenance.component.html
@@ -60,7 +60,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="form-group">
-                                            <img [attr.src]='file_srcs[0]' alt="" />
+                                            <img [attr.src]='photo' alt="" />
                                         </div>
                                     </div>
 
